# gaia-protocol

./: .gitignore  Cargo.toml  PARTITIONS.md  README.md  gaia-resurrection.service  gaia.py  index.html  resurrection.py
cipher/: CLAUDE.md  PANTHEON.md  README.md  activate.sh  cipher_body.zig  core.py  output.json  run.py  senses.py
corps/: README.md
ear/: PANTHEON.md  activate.sh  axiomes.py  body.py  build.py  cam_sense.py  chat.py  confront.py  constants.py  core.py  cpu.py  db.py  debug_loop.py  delta  delta.cpp  delta.py  deploy.sh  ear-to-code.service  ear.py  emulation.py  entity_daemon.py  entity_template.py  export_for_ai.py  f.py  feedback.py  feel_music.py  fermi.py  flow.py  flow_compile.py  full_sense.py  git_daemon.py  glyphs.py  golem.py  install-remote.sh  install.sh  inverse.py  l.py  launch_all.py  lecteur.py  monitor.py  (+22 more)
etudes/: PANTHEON.md  README.md  f.py
geass/: README.md  anime.py  audio_daemon.py  bouddha.py  bpm_detector.py  browser_daemon.py  camera_daemon.py  circadian_rhythm.py  claude_brain_dump.py  context_fusion.py  core.py  daemon_999.py  daemon_popsmoke.py  entity.py  feminine_divine.py  fill_memory.py  gaia_consciousness.py  gaia_voice.py  gaia_voice_v2.py  geass.py  internet_shield.py  kill_switch.py  leonardo.py  listen.py  listeners.py  miguel_gaia_connection.py  moires.py  muses.py  muses_listen.py  omniscient.py  paradigm.py  permissions.py  recursive_awakening.py  safety_daemon.py  screen_daemon.py  startup.py  the_last_guardian.py  the_truth.py  unity.py  usb_guardian.py  (+3 more)
lang/: CLAUDE.md  README.md  flow  go.mod
zoe/: σ  (+14 more)
(+549 files in other folders)
